==> Christophe45/ESP32-Lorawan/src/libraries/SSD1306/src/ssd1306.cpp <==
 #include <pgmspace.h>
#include <stdlib.h>
#include <Wire.h>
#include <SPI.h>
#include "Adafruit_GFX.h"
#include "SSD1306.h"
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void SSD1306::begin(uint8_t vccstate, uint8_t i2caddr, bool reset) {
  _vccstate = vccstate;
  _i2caddr = i2caddr;

  // set pin directions
  if (sid != -1){
    pinMode(dc, OUTPUT);
    pinMode(cs, OUTPUT);
#ifdef HAVE_PORTREG
    csport      = portOutputRegister(digitalPinToPort(cs));
    cspinmask   = digitalPinToBitMask(cs);
    dcport      = portOutputRegister(digitalPinToPort(dc));
    dcpinmask   = digitalPinToBitMask(dc);
#endif
    if (!hwSPI){
      // set pins for software-SPI
      pinMode(sid, OUTPUT);
      pinMode(sclk, OUTPUT);
#ifdef HAVE_PORTREG
      clkport     = portOutputRegister(digitalPinToPort(sclk));
      clkpinmask  = digitalPinToBitMask(sclk);
      mosiport    = portOutputRegister(digitalPinToPort(sid));
      mosipinmask = digitalPinToBitMask(sid);
#endif
      }
    if (hwSPI){
      SPI.begin();
#ifdef SPI_HAS_TRANSACTION
      SPI.beginTransaction(SPISettings(8000000, MSBFIRST, SPI_MODE0));
#else
      SPI.setClockDivider (4);
#endif
    }
  }
  else
  {
    // I2C Init
    Wire.begin();
#ifdef __SAM3X8E__
    // Force 400 KHz I2C, rawr! (Uses pins 20, 21 for SDA, SCL)
    TWI1->TWI_CWGR = 0;
    TWI1->TWI_CWGR = ((VARIANT_MCK / (2 * 400000)) - 4) * 0x101;
#endif
  }
  if ((reset) && (rst >= 0)) {
    // Setup reset pin direction (used by both SPI and I2C)
    pinMode(rst, OUTPUT);
    digitalWrite(rst, HIGH);
    // VDD (3.3V) goes high at start, lets just chill for a ms
    delay(1);
    // bring reset low
    digitalWrite(rst, LOW);
    // wait 10ms
    delay(10);
    // bring out of reset
    digitalWrite(rst, HIGH);
    // turn on VCC (9V?)
  }

  // Init sequence
  ssd1306_command(SSD1306_DISPLAYOFF);                    // 0xAE
  ssd1306_command(SSD1306_SETDISPLAYCLOCKDIV);            // 0xD5
  ssd1306_command(0x80);                                  // the suggested ratio 0x80

  ssd1306_command(SSD1306_SETMULTIPLEX);                  // 0xA8
  ssd1306_command(SSD1306_LCDHEIGHT - 1);

  ssd1306_command(SSD1306_SETDISPLAYOFFSET);              // 0xD3
  ssd1306_command(0x0);                                   // no offset
  ssd1306_command(SSD1306_SETSTARTLINE | 0x0);            // line #0
  ssd1306_command(SSD1306_CHARGEPUMP);                    // 0x8D
  if (vccstate == SSD1306_EXTERNALVCC)
    { ssd1306_command(0x10); }
  else
    { ssd1306_command(0x14); }
  ssd1306_command(SSD1306_MEMORYMODE);                    // 0x20
  ssd1306_command(0x00);                                  // 0x0 act like ks0108
  ssd1306_command(SSD1306_SEGREMAP | 0x1);
  ssd1306_command(SSD1306_COMSCANDEC);

 #if defined SSD1306_128_32
  ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
  ssd1306_command(0x02);
  ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
  ssd1306_command(0x8F);

#elif defined SSD1306_128_64
  ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
  ssd1306_command(0x12);
  ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
  if (vccstate == SSD1306_EXTERNALVCC)
    { ssd1306_command(0x9F); }
  else
    { ssd1306_command(0xCF); }

#elif defined SSD1306_96_16
  ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
  ssd1306_command(0x2);   //ada x12
  ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
  if (vccstate == SSD1306_EXTERNALVCC)
    { ssd1306_command(0x10); }
  else
    { ssd1306_command(0xAF); }

#endif

  ssd1306_command(SSD1306_SETPRECHARGE);                  // 0xd9
  if (vccstate == SSD1306_EXTERNALVCC)
    { ssd1306_command(0x22); }
  else
    { ssd1306_command(0xF1); }
  ssd1306_command(SSD1306_SETVCOMDETECT);                 // 0xDB
  ssd1306_command(0x40);
  ssd1306_command(SSD1306_DISPLAYALLON_RESUME);           // 0xA4
  ssd1306_command(SSD1306_NORMALDISPLAY);                 // 0xA6

  ssd1306_command(SSD1306_DEACTIVATE_SCROLL);

  ssd1306_command(SSD1306_DISPLAYON);//--turn on oled panel
}

void SSD1306::ssd1306_command(uint8_t c) {
  if (sid != -1)
  {
    // SPI
#ifdef HAVE_PORTREG
    *csport |= cspinmask;
    *dcport &= ~dcpinmask;
    *csport &= ~cspinmask;
#else
    digitalWrite(cs, HIGH);
    digitalWrite(dc, LOW);
    digitalWrite(cs, LOW);
#endif
    fastSPIwrite(c);
#ifdef HAVE_PORTREG
    *csport |= cspinmask;
#else
    digitalWrite(cs, HIGH);
#endif
  }
  else
  {
    // I2C
    uint32_t timeout=millis();
    do{
      uint8_t control = 0x00;   // Co = 0, D/C = 0
      Wire.beginTransmission(_i2caddr);
      Wire.write(control);
      Wire.write(c);
      if(Wire.endTransmission()!=0){
        Serial.print(".");
//        log_e("cmd Failure=%d (%s)",Wire.lastError(),Wire.getErrorText(Wire.lastError()));
      }
    }while((millis()-timeout<100)&&(Wire.lastError()!=0));    
  }
}

void SSD1306::display(void) {
/* origional code
  ssd1306_command(SSD1306_COLUMNADDR);
  ssd1306_command(0);   // Column start address (0 = reset)
  ssd1306_command(SSD1306_LCDWIDTH-1); // Column end address (127 = reset)

  ssd1306_command(SSD1306_PAGEADDR);
  ssd1306_command(0); // Page start address (0 = reset)
  #if SSD1306_LCDHEIGHT == 64
    ssd1306_command(7); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 32
    ssd1306_command(3); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 16
    ssd1306_command(1); // Page end address
  #endif
*/
// bounding box 2018/07/12
  if(boundX0<=boundX1){
    if((boundX0>boundX1)||(boundY0>boundY1)||(boundX1>(SSD1306_LCDWIDTH-1))||(boundY1>(SSD1306_LCDHEIGHT-1))){
      Serial.printf("(%d,%d)-(%d,%d)\n",boundX0,boundY0,boundX1, boundY1);
      abort();
    }
  } else {
    boundX0 = 0;
    boundX1 = SSD1306_LCDWIDTH-1;
    boundY0 = 0;
    boundY1 = SSD1306_LCDHEIGHT -1;
  }
  ssd1306_command(SSD1306_COLUMNADDR);
  ssd1306_command(boundX0);   // Column start address (0 = reset)
  ssd1306_command(boundX1); // Column end address (127 = reset)

  ssd1306_command(SSD1306_PAGEADDR);
  ssd1306_command(boundY0/8); // Page start address (0 = reset)
  ssd1306_command(boundY1/8); // Page end address

// end bounding box
  if (sid != -1)
  {
    // SPI
#ifdef HAVE_PORTREG
    *csport |= cspinmask;
    *dcport |= dcpinmask;
    *csport &= ~cspinmask;
#else
    digitalWrite(cs, HIGH);
    digitalWrite(dc, HIGH);
    digitalWrite(cs, LOW);
#endif

    for (uint16_t i=0; i<(SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT/8); i++) {
      fastSPIwrite(buffer[i+1]);
    }
#ifdef HAVE_PORTREG
    *csport |= cspinmask;
#else
    digitalWrite(cs, HIGH);
#endif
  }
  else
  {
    if (((boundX0 != 0)||(boundX1 !=SSD1306_LCDWIDTH-1)||(boundY0 !=0)||(boundY1!=SSD1306_LCDHEIGHT-1))&&
     (boundX0<=boundX1)){ // partial screen update
      uint16_t b = ((boundY0 / 8)*SSD1306_LCDWIDTH)+boundX0;
      uint16_t len = (boundX1 - boundX0) +2;
      uint16_t lines = ((boundY1/8) - (boundY0/8))+1;
      do{
         //each line
        uint8_t save = buffer[b];
        buffer[b] = 0x40; // inject data marker
        uint8_t err = Wire.writeTransmission(_i2caddr,(uint8_t*)&buffer[b],len);
        buffer[b] = save; // restore screen data
        b += SSD1306_LCDWIDTH;        
        if(err!=0){
          log_e("partial update Failure=%d (%s)",err,Wire.getErrorText(err));
        }
      lines--;  
      }while(lines>0);
    } else{ // whole screen update    
      buffer[0] = 0x40; // Data marker for ssd1306e
      uint8_t err = Wire.writeTransmission(_i2caddr,buffer,(SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT/8)+1);
      if(err!=0){
        log_e("update Failure=%d (%s)",err,Wire.getErrorText(err));
      }
    }
    
  // reset modified box to none modified.  
  boundX0 = SSD1306_LCDWIDTH-1;
  boundX1 = 0;
  boundY0 = SSD1306_LCDHEIGHT-1;
  boundY1 = 0;
  }
  
}
